--- a/index.html
+++ b/index.html
@@ -6,28 +6,19 @@
         body, table { font-family: Helvetica, Arial, sans-serif; font-size: 13px; }
         a { color: #006DBA; }
     </style>
-    <!--NUMBER--9gcm67qr--NUMBER-->
-    <!--TYPE--RichText--TYPE-->
-    <!--PERMISSION--Readonly--PERMISSION-->
-    <!--ACCESS--Public--ACCESS-->
-    <!--PASSWORD----PASSWORD-->
-    <!--STATUS--Active--STATUS-->
-    <!--QUICKEDIT--False--QUICKEDIT-->
-    <!--QUICKEDITPASSWORD----QUICKEDITPASSWORD-->
-    <!--DATECREATED--2021-08-29 15:52:51--DATECREATED-->
-    <!--DATEUPDATED--2021-08-29 15:56:14--DATEUPDATED-->
-    <!--LABELS--MEGA--LABELS-->
 </head>
 <body>
 <h2>Resistance 3 [BCUS98176]-[Gutamps Official]</h2>
-<anotepad><p>Part 1 : <a href="https://mega.nz/file/lCoWEIxY#yxeR3t-ve56qeSGVb6KO0EI2iN8SLhoUwp0Lxsb884o" target="_blank" rel="noopener">https://mega.nz/file/lCoWEIxY#yxeR3t-ve56qeSGVb6KO0EI2iN8SLhoUwp0Lxsb884o</a></p>
-<p>Part 2 : <a href="https://mega.nz/file/EGgTjBoY#Z_irP4E1cXZ2SmDlL-LGenhVKYL-GO9RH3-0aWSKV2k" target="_blank" rel="noopener">https://mega.nz/file/EGgTjBoY#Z_irP4E1cXZ2SmDlL-LGenhVKYL-GO9RH3-0aWSKV2k</a></p>
-<p>Part 3 : <a href="https://mega.nz/file/tGgQWSSY#HgaOFqvBXsEPQjdgWWoU9Clv450WyqsYtYh1uGssC9A" target="_blank" rel="noopener">https://mega.nz/file/tGgQWSSY#HgaOFqvBXsEPQjdgWWoU9Clv450WyqsYtYh1uGssC9A</a></p>
-<p>Part 4 : <a href="https://mega.nz/file/hOQXHRIT#Fzf7-AgmO9lVQzR9y856h-dSyJZKQzeVbWmJAEDgz34" target="_blank" rel="noopener">https://mega.nz/file/hOQXHRIT#Fzf7-AgmO9lVQzR9y856h-dSyJZKQzeVbWmJAEDgz34</a></p>
-<p>Part 5 : <a href="https://mega.nz/file/oe5mzKQa#0WGOtqOJhTPW0FyGqpGpW0ZpdJcJRqgh1qPJD6ZtLIQ" target="_blank" rel="noopener">https://mega.nz/file/oe5mzKQa#0WGOtqOJhTPW0FyGqpGpW0ZpdJcJRqgh1qPJD6ZtLIQ</a></p>
-<p>Part 6 : <a href="https://mega.nz/file/PUoDwa5Y#Hi9Z0dhNTOXwVYtSc-ll6KndKgZ40EhAfAQu1jCmo8M" target="_blank" rel="noopener">https://mega.nz/file/PUoDwa5Y#Hi9Z0dhNTOXwVYtSc-ll6KndKgZ40EhAfAQu1jCmo8M</a></p>
-<p>Part 7 : <a href="https://mega.nz/file/eFRHnbaC#wASG8M4YVkJpRFVCGW1y3mfC8T_dlG9c7jkbKdQGiCM" target="_blank" rel="noopener">https://mega.nz/file/eFRHnbaC#wASG8M4YVkJpRFVCGW1y3mfC8T_dlG9c7jkbKdQGiCM</a></p>
-<p>Part 8 : <a href="https://mega.nz/file/vZRFQbJL#Pl6FD3ROBG2vdyJ7JgC91-arQaq9gGNFdUmmYGsmh_M" target="_blank" rel="noopener">https://mega.nz/file/vZRFQbJL#Pl6FD3ROBG2vdyJ7JgC91-arQaq9gGNFdUmmYGsmh_M</a></p>
-<p>Part 9 : <a href="https://mega.nz/file/zJZnwJ5A#RbHJ2vQC_Vtyk8xI1O8107wl-GRuBEHlHVP9X5gEk_o" target="_blank" rel="noopener">https://mega.nz/file/zJZnwJ5A#RbHJ2vQC_Vtyk8xI1O8107wl-GRuBEHlHVP9X5gEk_o</a></p></anotepad>
+    <style> body { color: blueviolet };
+    </style>
+<p>Part 1 : <a href="https://mega.nz/file/RSgS1aoC#sX-_DpXkrWLu4NJDYdOJi3XEGGjnpEWTXcleM1ZW1Cs" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 2 : <a href="https://mega.nz/file/EXZXVJQB#DRFLFUkfwk1HgC4iTgLvbyjhO9ev5SqQUltoz5ZdR1w" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 3 : <a href="https://mega.nz/file/QfpHXDiQ#1nv1RDKLbafDC5iIHN00qis78fzX9iKyN73Sx0C4F3k" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 4 : <a href="https://mega.nz/file/hOQXHRIT#Fzf7-AgmO9lVQzR9y856h-dSyJZKQzeVbWmJAEDgz34" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 5 : <a href="https://mega.nz/file/0eYBUbhJ#0gnevQ1UrR-ayv4zgg8OqLeRKn6pbWjwY8niF81L-90" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 6 : <a href="https://mega.nz/file/eZgzTJ4I#gfP9Unc4GItKnye_3Jj6OnxhYosF_lXUcP_CZWzFtrw" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 7 : <a href="https://mega.nz/file/rURCgYbR#5yXxs0QpLiGMRJM1ajeaUnH1JEdbpfoX1eOQTmMm0Lw" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 8 : <a href="https://mega.nz/file/bMJiUK4R#a-wLOq9YrRwCs4HNsvlA_LHQNQn2B9ZPiC6NmiXAFd4" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 9 : <a href="https://mega.nz/file/7Egh1R5A#jF_H7u4OAv-kJiHpw6WevKp_iQ2V9FM_-6lSHD7IJp0" target="_blank" rel="noopener">Get Link</a></p>
 </body>
 </html>
